PROJECTS/projectspace/force-app/main/default/objects/Customer__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>