PROJECTS/projectspace/force-app/main/default/objects/Customer__c/fields/Street_Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_line_2__c</fullName>
    <label>Street Address line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>