PROJECTS/projectspace/force-app/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>State__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Street_Address_line_2__c</columns>
    <columns>City__c</columns>
    <columns>postal_code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>